REST test, preparing to getting data from DB

--- a/app/product-list/product-list-view.html
+++ b/app/product-list/product-list-view.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <pre>{{ productList | json}}</pre>
+    Server data: <pre>{{ serverData | json}}</pre>
     <div class="row product-list">
         <ng-repeat ng-repeat="product in productList">
             <div class="col-md-2 product-box"
