--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="app/app.js"></script>
+<script src="app/dataFactory.js"></script>
 <script src="app/product-list/product-list-ctrl.js"></script>
 <script src="app/product-single/product-single-ctrl.js"></script>
 </body>
