--- a/app/product-single/product-single-view.html
+++ b/app/product-single/product-single-view.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <pre>{{product | json}}</pre>
     <div class="row product-single">
         <div class="col-md-4 product-single_image">
             <img ng-src="{{product.img_src}}" alt="" class="img-responsive">
