Created admin panel, database.js

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li>
+                            <a ui-sref="admin">Admin Panel</a>
+                        </li>
+                        <li>
                             <a href="#">About us</a>
                         </li>
                     </ul>
@@ -91,9 +94,9 @@
         <div ui-view=""></div>
     </main>
 
-    <footer>
+    <footer class="">
         <div class="container">
-            <p>Projekt Programu</p>
+            <p class="pull-right">Projekt Programu</p>
         </div>
     </footer>
 
