--- a/app/admin-panel/admin-panel-view.html
+++ b/app/admin-panel/admin-panel-view.html
@@ -1,6 +1,25 @@
 <div class="container jumbotron">
-    <form>
-        <label for="input_import_file">Browse your computer:</label>
-        <input type="file" name="import_file" id="input_import_file">
-    </form>
+    <div class="alert alert-danger" ng-if="answer.error">{{answer.error}}</div>
+    <div class="alert alert-success" ng-if="answer && !answer.error">Success!</div>
+
+    <div class="col-md-6">
+        <h3>DB management</h3>
+        <div class="btn-group" role="group">
+            <div class="btn btn-info" ng-click="createTablesData()">create tables data</div>
+            <div class="btn btn-primary" ng-click="createTables()">create tables</div>
+            <div class="btn btn-danger" ng-click="removeTables()">remove tables</div>
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <h3>Data from CSV</h3>
+        <label for="csvName">Name of CSV file</label>
+        <input id="csvName" type="text" ng-model="csvName">
+        <div class="btn btn-info" ng-click="insertCSVtoDB()">Download</div>
+    </div>
+
+    <div ng-if="answer" class="col-md-12">
+        <p>Server answer:</p>
+        <pre>{{ answer | json}}</pre>
+    </div>
 </div>
