--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-
-    <header>
+    <header ng-controller="headerController">
         <nav class="navbar navbar-default">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -28,29 +27,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="dropdown">
-                            <a href="#"
-                               class="dropdown-toggle"
-                               data-toggle="dropdown"
-                               role="button"
-                               aria-haspopup="true"
-                               aria-expanded="false">
-                                Product categories
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="dropdown">
-                            <a href="#"
-                               class="dropdown-toggle"
+                            <a class="dropdown-toggle"
                                data-toggle="dropdown"
                                role="button"
                                aria-haspopup="true"
@@ -59,30 +36,23 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
+                                <li ng-repeat="shop in ShopsList">
+                                    <a ng-href="#!/shops/{{shop.slug}}">{{shop.name}}</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
 
                     <div class="navbar-left navbar-cart-box">
                         <span class="navbar-cart-box_subtotal">
-                            Your cart: <span>12</span>
+                            Your cart: <span ng-bind='cart | currency : "zł"'></span>
                         </span>
                         <button class="btn btn-primary">Checkout</button>
                     </div>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
+                        <li ui-sref-active="active">
                             <a ui-sref="admin">Admin Panel</a>
-                        </li>
-                        <li>
-                            <a href="#">About us</a>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -104,9 +74,13 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 <script src="app/app.js"></script>
 <script src="app/dataFactory.js"></script>
 <script src="app/product-list/product-list-ctrl.js"></script>
 <script src="app/product-single/product-single-ctrl.js"></script>
+<script src="app/shop-single/shop-single-ctrl.js"></script>
+<script src="app/product-list/product-list-by-shop-ctrl.js"></script>
+<script src="app/admin-panel/admin-panel-ctrl.js"></script>
 </body>
 </html>
