--- a/app/product-single/product-single-view.html
+++ b/app/product-single/product-single-view.html
@@ -1,5 +1,4 @@
 <div class="container">
-    <!--<pre>{{product | json}}</pre>-->
     <div class="alert alert-danger" ng-if="product.error">{{product.error}}</div>
     <div class="row product-single" ng-if="!product.error">
         <div class="col-md-4 product-single_image">
@@ -12,7 +11,7 @@
                 <span ng-if="product.old_price" class="price product-box_old-price">{{product.old_price | currency : "zł"}}</span>
             </div>
             <p>{{product.description}}</p>
-            <div class="product-single_shop-link small">
+            <div ng-if="shop" class="product-single_shop-link small">
                 See another products of:
                 <a ng-href="#!/{{shop.slug}}/products">
                     <img ng-src="{{shop.img_src}}" alt="">
