--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
                     <a class="navbar-brand" ui-sref="home">Shops Online</a>
                 </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="dropdown">
+                        <li ng-if="ShopsList.length" class="dropdown">
                             <a class="dropdown-toggle"
                                data-toggle="dropdown"
                                role="button"
