--- a/app/shop-single/shop-single-view.html
+++ b/app/shop-single/shop-single-view.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="row shop-single">
         <div class="col-md-2 shop-single_image">
-            <img ng-src="{{shop.img_src}}" alt="" class="img-responsive">
+            <img ng-src="{{shop.img_src}}"
+                 alt=""
+                 class="img-responsive">
         </div>
         <div class="col-md-8 shop-single_description">
             <h1>{{shop.name}}</h1>
