--- a/app/admin-panel/admin-panel-view.html
+++ b/app/admin-panel/admin-panel-view.html
@@ -5,9 +5,12 @@
     <div class="col-md-6">
         <h3>DB management</h3>
         <div class="btn-group" role="group">
-            <div class="btn btn-primary" ng-click="createTablesData()">Create tables data</div>
-            <div class="btn btn-primary" ng-click="createTables()">Create tables</div>
-            <div class="btn btn-primary" ng-click="removeTables()">Remove tables</div>
+            <div class="btn btn-primary"
+                 ng-click="createTablesData()">Create tables data</div>
+            <div class="btn btn-primary"
+                 ng-click="createTables()">Create tables</div>
+            <div class="btn btn-primary"
+                 ng-click="removeTables()">Remove tables</div>
         </div>
     </div>
 
