--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header ng-controller="headerController">
         <nav class="navbar navbar-default">
             <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button"
                             class="navbar-toggle collapsed"
@@ -22,10 +21,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" ui-sref="home">Shops Online</a>
+                    <a class="navbar-brand"
+                       ui-sref="home">Shops Online</a>
                 </div>
 
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <div class="collapse navbar-collapse"
+                     id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li ng-if="ShopsList.length" class="dropdown">
                             <a class="dropdown-toggle"
@@ -38,7 +39,8 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li ng-repeat="shop in ShopsList">
-                                    <a ng-href="#!/shops/{{shop.slug}}">{{shop.name}}</a>
+                                    <a ng-href="#!/shops/{{shop.slug}}">
+                                        {{shop.name}}</a>
                                 </li>
                             </ul>
                         </li>
@@ -46,7 +48,8 @@
 
                     <div class="navbar-left navbar-cart-box">
                         <span class="navbar-cart-box_subtotal">
-                            Your cart: <span ng-bind='cart | currency : "zł"'></span>
+                            Your cart:
+                            <span ng-bind='cart | currency : "zł"'></span>
                         </span>
                         <button class="btn btn-primary">Checkout</button>
                     </div>
@@ -56,8 +59,8 @@
                             <a ui-sref="admin">Admin Panel</a>
                         </li>
                     </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
+                </div>
+            </div>
         </nav>
     </header>
 
