--- a/app/product-list/product-list-view.html
+++ b/app/product-list/product-list-view.html
@@ -8,14 +8,14 @@
             <div class="col-md-2 product-box"
                  ng-init="product.quantity = 1">
                 <figure>
-                    <a ng-href="#!/products/{{product.slug}}">
+                    <a ui-sref="product({ id: product.id, slug: product.slug})">
                         <img ng-src="{{product.img_src}}"
                              alt=""
                              class="img-responsive">
                     </a>
                 </figure>
                 <figcaption>
-                    <a ng-href="#!/products/{{product.slug}}">
+                    <a ui-sref="product({ id: product.id, slug: product.slug})">
                         <p class="product-box_name">{{product.name}}</p>
                     </a>
                     <span ng-if="product.price"
