--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 
     <footer class="">
         <div class="container">
-            <p class="pull-right">Projekt Programu</p>
+            <p class="pull-right">
+                <a href="http://github.com/igor-smyrnov/" target="_blank">by Igor Smyrnov</a>
+            </p>
         </div>
     </footer>
 
