--- a/app/shop-single/shop-single-view.html
+++ b/app/shop-single/shop-single-view.html
@@ -1,4 +1,8 @@
 <div class="container">
+    <div class="alert alert-danger"
+         ng-if="shop.error">{{shop.error.message}}</div>
+    <div class="row shop-single"
+         ng-if="!shop.error">
     <div class="row shop-single">
         <div class="col-md-2 shop-single_image">
             <img ng-src="{{shop.img_src}}"
